[workspace.package]
version = "0.1.0"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
documentation = "https://docs.rs/sawfish-client"
repository = "https://codeberg.org/mina86/sawfish-client"
license = "LGPL-3.0-or-later"
keywords = ["sawfish", "window_manager"]
categories = ["gui"]
edition = "2024"

[workspace]
members = [ "client", "examples/*" ]
exclude = ["crop"]
resolver = "2"
