[package]
name = "sawfish-client"
version = "0.1.0"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
description = "A client library for communicating with Sawfish window manager."
documentation = "https://docs.rs/sawfish-client"
readme = "README.md"
repository = "https://codeberg.org/mina86/sawfish-client"
license = "LGPL-3.0-or-later"
keywords = ["sawfish", "window_manager"]
categories = ["gui"]
edition = "2024"

[dependencies]
nix = { version = "0.30.0", features = ["net", "hostname", "socket"] }
dns-lookup = "3.0.1"
xcb = { version = "1.6.0", optional = true }
libc = "0.2.177"
derive_more = { version = "2.0.1", features = ["from"] }

[features]
experimental-xcb = ["dep:xcb"]
