[package]
name = "sawfish-client"
description = "A client library for communicating with Sawfish window manager."
readme = "../README.md"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
nix = { version = "0.30.0", features = ["net", "hostname", "socket"] }
dns-lookup = "3.0.1"
xcb = { version = "1.6.0", optional = true }
libc = "0.2.177"
derive_more = { version = "2.0.1", features = ["from"] }
futures-util = { version = "0.3.31", optional = true, features = ["io", "write-all-vectored"] }
tokio = { version = "1.48.0", features = ["net"], optional = true }
tokio-util = { version = "0.7.17", features = ["compat", "net"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["net", "rt"] }
tokio-util = { version = "0.7.17", features = ["compat", "net"] }

[features]
experimental-xcb = ["dep:xcb"]
async = ["dep:futures-util"]
tokio = ["async", "dep:tokio", "dep:tokio-util"]
